# manipdf_pdf-manipulation-tool

./: .gitignore  README.md  main.py  pyproject.toml
docs/: CHANGELOG.md  PRD_ManiPDF.md  System Instructions - ManiPDF.md
docs/plans/: README.md  advanced_dependencies_setup.md  checklist.md  ci-github-actions.md  extract_separate_pdfs_feature.md  macos-dmg.md  master_implementation_plan.md  phase_5_gui_implementation_plan.md  pyinstaller-spec.md  release-plan.md  repository_analysis.md  windows-nsis.md
src/manipdf/cli/: main.py
src/manipdf/core/: advanced.py  conversions.py  modification.py  organization.py  security.py  utils.py
src/manipdf/gui/: main.py
tests/: conftest.py  test_advanced.py  test_cli.py  test_conversions.py  test_gui.py  test_modification.py  test_organization.py  test_security.py  test_utils.py  test_version.py
